[gd_scene load_steps=12 format=3 uid="uid://d6k5n61qtd2"]

[ext_resource type="Script" path="res://scripts/player_attack.gd" id="1_c41aa"]
[ext_resource type="Texture2D" uid="uid://cnrevimi4ar0b" path="res://assets/sprite_sheet.png" id="2_aeg3t"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ktpgn"]
radius = 3.0
height = 8.0

[sub_resource type="Animation" id="Animation_ya60c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PhysicsShape:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [8.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PhysicsShape:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../PhysicsShape:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_0h14n"]
resource_name = "blue_attack"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1, 1e+06, 1),
"update": 1,
"values": [16, 17, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PhysicsShape:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [3.0, 2.5, 3.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PhysicsShape:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [8.0, 15.0, 8.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [Vector2(0.5, 0), Vector2(0.5, -0.5), Vector2(0.5, 0)]
}

[sub_resource type="Animation" id="Animation_2xigo"]
resource_name = "green_attack"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1, 1e+06, 1),
"update": 1,
"values": [40, 41, 40]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PhysicsShape:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [3.0, 3.0, 3.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PhysicsShape:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [12.0, 15.0, 12.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [Vector2(0.5, 0), Vector2(0.5, 0), Vector2(0.5, 0)]
}

[sub_resource type="Animation" id="Animation_nu31g"]
resource_name = "purple_attack"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1, 1e+06, 1),
"update": 1,
"values": [64, 65, 64]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PhysicsShape:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [3.5, 6.5, 3.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PhysicsShape:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [8.0, 10.0, 8.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.5, 0.5), Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_3ywrl"]
resource_name = "red_attack"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1, 1e+06, 1),
"update": 1,
"values": [88, 89, 88]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PhysicsShape:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [4.0, 6.5, 4.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PhysicsShape:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [8.0, 10.0, 8.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [Vector2(4.5, 0.5), Vector2(4.5, 0.5), Vector2(4.5, 0.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../PhysicsShape:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(4, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bdgyr"]
resource_name = "yellow_attack"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1, 1e+06, 1),
"update": 1,
"values": [112, 113, 112]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PhysicsShape:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [3.0, 8.0, 3.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PhysicsShape:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [6.0, 10.0, 6.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 0), Vector2(1, 0)]
}

[sub_resource type="Animation" id="Animation_2o5ji"]
resource_name = "orange_attack"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1, 1e+06, 1),
"update": 1,
"values": [136, 137, 136]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PhysicsShape:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [4.0, 8.0, 4.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PhysicsShape:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [8.0, 10.0, 8.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.85),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 0), Vector2(1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d0nr1"]
_data = {
"RESET": SubResource("Animation_ya60c"),
"blue_attack": SubResource("Animation_0h14n"),
"green_attack": SubResource("Animation_2xigo"),
"orange_attack": SubResource("Animation_2o5ji"),
"purple_attack": SubResource("Animation_nu31g"),
"red_attack": SubResource("Animation_3ywrl"),
"yellow_attack": SubResource("Animation_bdgyr")
}

[node name="PlayerAttack" type="RigidBody2D"]
collision_layer = 64
collision_mask = 243
mass = 1000.0
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 2
linear_damp = 100.0
angular_damp = 100.0
script = ExtResource("1_c41aa")

[node name="PhysicsShape" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ktpgn")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_aeg3t")
hframes = 8
vframes = 18
frame = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
libraries = {
"": SubResource("AnimationLibrary_d0nr1")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
